<resources>
    <string name="app_name">NASA\'s Image Of The Day</string>
    <string name="dialogNeutralBtn">OK</string>
    <string name="btnConfirm">Confirm</string>
    <string name="versionNumber">version number: v</string>
    <string name="dateFormat">MMM dd, yyyy</string>
    <string name="undoBtn">Undo</string>

    <!--    Navigation Drawer -->
    <string name="navHome">Home</string>
    <string name="navSavedImages">Your Saved Images</string>
    <string name="navSavedDates">Your Saved Dates</string>
    <string name="navApiSetting">API Setting</string>
    <string name="navExit">Exit</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!--    Toolbar -->
    <string name="navTodayImage">Today\'s Image</string>
    <string name="navHelp">Help</string>
    <string name="imageActivityDateTitle">Image From</string>

    <!--    Image Activity -->
    <string name="viewHDInBrowser">View image in browser</string>
    <string name="downloadImage">Download Image</string>
    <string name="saveDate">Save Date</string>
    <string name="troubleViewingText">Having trouble viewing image?</string>
    <string name="viewSDInBrowser">See in lower resolution</string>
    <string name="dateSaved">Date Saved!</string>
    <string name="dateAlreadySaved">Date was already saved!</string>
    <string name="error">An unknown error occurred!</string>

    <!--    Image Activity Alert Dialog -->
    <string name="downloadImageDialogTitle">Name your image file: </string>
    <string name="helpImageDialogTitle">Help | Image Activity</string>
    <string name="helpImageDialogMessage">This page displays the title, image, and a short description of an image taken by NASA from the given day. Click the link to view the image in your browser, download the image to your device by clicking the download icon, or save the post for later by clicking the heart icon.</string>
    <string name="dialogPosSaveBtn">Save</string>
    <string name="dialogNegBtn">Cancel</string>
    <string name="fileDownloaded">Downloaded image to device.</string>
    <string name="fileExists">A file with that name already exists.</string>
    <string name="fileDownloadError">Could not download image onto device. Please try again.</string>
    <string name="fileNameHint">Name your image</string>

    <!--  Home Activity Dialog  -->
    <string name="homeTitle">Home</string>
    <string name="pickADate">Pick a date to view its image: </string>
    <string name="noResultFound">Could not find image for selected day</string>
    <string name="homeDialogTitle">Help | Home Activity</string>
    <string name="homeDialogMessage">Welcome to the Home Page. Select a day on the calendar and click "Confirm" to see the selected date\'s image from NASA.</string>

    <!--  Saved Images Activity  -->
    <string name="savedImagesActivityTitle">Your Saved Images</string>
    <string name="savedImageDate">Date created: </string>
    <string name="savedImageSize">File size: </string>
    <string name="contentDescription">Saved Image</string>

    <!--  Saved Images Dialog  -->
    <string name="savedImagesDialogTitle">Help | Saved Images Activity</string>
    <string name="savedImagesDialogMessage">Find a list of all your saved pictures here. Click on an image to see the details. Hold your finger on the image to delete from your device.</string>
    <string name="deleteImageTitle">Delete this image?</string>
    <string name="dialogPosDelBtn">Delete</string>

    <!--  Saved date Dialog  -->
    <string name="delete_date">Delete Date</string>
    <string name="delete_date_confirmation">Are you sure you want to delete this date?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="savedDatesDialogMessage">Find a list of all your saved dates here. Hold your finger on the date to delete from your device</string>
    <string name="savedDateDialogTitle">Help | Saved Dates Activity</string>

    <!--  Set API Key Activity -->
    <string name="use_default_api_key">Use Default API Key</string>
    <string name="set_api_key">Set API Key:</string>
    <string name="apiTitle">Set API Key</string>
    <string name="savedAPIKey">API Key Saved</string>
    <string name="wantYourOwn">Want your own API key?</string>

    <!--  Set API Key Activity Help Menu  -->
    <string name="apiKeyHelpTitle">Help | Set API Key Activity</string>
    <string name="apiKeyHelpMessage">Set your own API key from NASA\'s APOD. Paste your API key in the text section. Alternatively, click the Use Default API key to use one that\'s already provided. When ready, click confirm to store it in your device.</string>

</resources>