<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navHome"
        android:title="@string/navHome"
        android:icon="@drawable/home"
        android:orderInCategory="0"
        />

    <item
        android:id="@+id/navTodayImage"
        android:title="@string/navTodayImage"
        android:icon="@drawable/planet"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/navSavedImages"
        android:title="@string/navSavedImages"
        android:icon="@drawable/images"
        android:orderInCategory="2"
        />

    <item
        android:id="@+id/navExit"
        android:title="@string/navExit"
        android:icon="@drawable/exit"
        android:orderInCategory="3"
        />
</menu>